# hello-stsi

./: .gitignore  CMakeLists.txt  generate_test_bam.py  main.cpp  read_bam.cpp  read_file.cpp
